--- a/css/carrusel.css
+++ b/css/carrusel.css
@@ -6,7 +6,7 @@
 .slideshow-container {
   max-width: 1000px;
   position: relative;
-  margin: 60px auto;
+  margin: 320px auto 0px auto;
   height: 520px;
 }
 
