desarrollo/secciones/vuelos/cursos
Listo el desarrollo para implentar codigo de datos , falta detalle responsive

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -961,6 +961,42 @@
 	/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 		
 	@media only screen and (max-width: 479px) {
+		.linea_left_ul {
+			
+			padding-top: 0px;
+		}
+		.contenedor_info_servicio_especial {
+			background-color: #414141;
+			display: inline-block;
+			width: 79.4%;
+			margin-top: -76px;
+			padding-left: 30px;
+			padding-right: 30px;
+			
+		}
+		.contenedor_info_servicio_taxi {
+			border-bottom: 2px solid #f0b556;
+			border-left: 2px solid #f0b556;
+			border-right: 2px solid #f0b556;
+			display: inline-block;
+			width: 78%;
+			margin-top: -71px;
+			padding-left: 30px;
+			padding-right: 30px;
+		}
+		.servicio-especial {
+			background: linear-gradient(-45deg, #2e2e2e 50%, #414141 50%);
+			height: 341px;
+			border-top-right-radius: 0px;
+		}
+		.servicio_taxi{
+			border-top: 2px solid #f0b556;
+			border-top-left-radius: 0px;
+			display: block;
+			height: 180px;
+			border-right: 2px solid  #f0b556;
+			
+			}
 		.img_app_viajero {
 			float: left;
 			padding-top: 20px;
@@ -1365,12 +1401,12 @@ transform: rotate3d(0, 0, 1, -45deg);
 		ul.dt-sc-tabs-frame, ul.dt-sc-tabs-frame li { margin: 0; width:100%; }
 		ul.dt-sc-tabs-frame li a { float: none; display:block; }		
 		ul.dt-sc-tabs { border-bottom:none; }
-		ul.dt-sc-tabs li { display:inline-block; padding: 0; text-align: center; width:100%; }	
+		ul.dt-sc-tabs li { display:inline-block; padding: 0; text-align: center; width:60%; }	
 		ul.dt-sc-tabs li a { padding: 0; }	
 		ul.dt-sc-tabs li a.current { font-weight:bold; }	
 		
-		.dt-sc-tabs-container.type2 ul.dt-sc-tabs li { margin: 0; }
-		.dt-sc-tabs-container.type2 ul.dt-sc-tabs li a { border-bottom: 1px solid; border-right: 1px solid; font-size: 15px; line-height: 40px; margin-bottom: 5px; padding: 0; width: 100%; }
+		.dt-sc-tabs-container.type2 ul.dt-sc-tabs li { margin: 27px; }
+		.dt-sc-tabs-container.type2 ul.dt-sc-tabs li a { border-bottom: 1px solid; border-right: 1px solid; font-size: 13px; line-height: 40px; margin-bottom: 0px; padding: 0; width: 100%; }
 		.dt-sc-tabs-container.type2 ul.dt-sc-tabs li a.current { border-bottom: 2px solid; }			
 		
 		.dt-sc-domains-list ul li span { font-size: 20px; width: 58%; }
