--- a/css/shortcodes.css
+++ b/css/shortcodes.css
@@ -3,6 +3,16 @@
 /* CSS Document */
 
 /*----*****---- << Shortcodes >> ----*****----*/
+.tarjeta_cursos_contenedor{
+	
+    display: inline-block;
+    overflow: hidden;
+    padding: 12px;
+    position: relative;
+    text-align: center;
+    width: 100%;
+
+}
 
 	.dt-sc-hr { background: url(../images/splitter.png) repeat-x; clear: both; display: block; float: left; height: 10px; margin: 40px 0; position: relative; width: 100%; z-index: 1; }	
 	.dt-sc-hr-medium { background: url(../images/splitter-medium.png) repeat-x; clear: both; display: block; float: left; height: 16px; margin: 40px 0; position: relative; width: 100%; z-index: 1; }
@@ -45,10 +55,10 @@
 	.dt-sc-tabs-container { clear:both; float:left; margin: 0 0 90px;  padding: 0; width:100%;position: relative;z-index: 3; }
 	ul.dt-sc-tabs-frame { float:left; margin:0px 2% 0px 0; padding:0px; width:98%; }
 	ul.dt-sc-tabs-frame li { float: left; display: inline; margin: 0 0 0 10px; padding: 0; }
-	ul.dt-sc-tabs-frame li a { border-style: solid; border-width: 2px 1px 0 1px; float:left; margin:0px; padding:0px 20px; text-align:center; color:#333334; line-height:40px; }
-	ul.dt-sc-tabs-frame li a.current { color:#fff; border-bottom:0px; position:relative; z-index:1; }
+	ul.dt-sc-tabs-frame li a { /*border-style: solid; border-width: 2px 1px 0 1px; */float:left; margin:0px; padding:0px 50px; text-align:center; color:#333334; line-height:40px; }
+	ul.dt-sc-tabs-frame li a.current { /*color:#fff;*/ border-bottom:0px; position:relative; z-index:1; }
 	
-	.dt-sc-tabs-frame-content { background: #fff; border: 1px solid; float:left; clear:both; width:89.6%; margin:-1px 0px 0px; padding:25px 5% 15px; }	
+	.dt-sc-tabs-frame-content { /*background: #fff; border: 1px solid; */float:left; clear:both; width:89.6%; margin:-1px 0px 0px; /*padding:25px 5% 15px;*/ }	
 	
 	/*----*****---- << Frameless Tabs >> ----*****----*/
 	
@@ -216,13 +226,13 @@
 	
 	/*----*****---- << Blockquotes >> ----*****----*/
 	
-	blockquote { background:#ededed; display:block; padding:25px 25px 25px 50px; margin:0px; position:relative; border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; }
+	blockquote { background:#ededed; display:block; padding:25px 25px 25px 50px; margin:0px; position:relative; border-radius: 15px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; }
 	blockquote q { font-style:normal; font-size:14px; line-height:24px; }
 	blockquote cite { font-size: 13px; }
 	
 	blockquote:before { content:"\f10d"; font-family:FontAwesome; font-style:normal; color:#797979; font-weight:normal; text-decoration:inherit; font-size:20px; position:absolute; top:25px; left:20px; }
 	
-	blockquote.electricblue:before, blockquote.orange:before, blockquote.cyan:before, blockquote.purple:before, blockquote.red:before, blockquote.coral:before, blockquote.darkblue:before, blockquote.ferngreen:before, blockquote.duskblue:before, blockquote.darkmagenta:before, blockquote.lavender:before, blockquote.pink:before, blockquote.lightgreen:before, blockquote.limegreen:before, blockquote.ocean:before, blockquote.royalblue:before, blockquote.violet:before, blockquote.yellow:before, blockquote.salmon:before, blockquote.chocolate:before { color:#fff; }
+	blockquote.electricblue:before, blockquote.orange:before, blockquote.cyan:before, blockquote.purple:before, blockquote.red:before, blockquote.coral:before, blockquote.darkblue:before, blockquote.ferngreen:before, blockquote.duskblue:before, blockquote.darkmagenta:before, blockquote.lavender:before, blockquote.pink:before, blockquote.lightgreen:before, blockquote.limegreen:before, blockquote.ocean:before, blockquote.royalblue:before, blockquote.violet:before, blockquote.yellow:before, blockquote.salmon:before, blockquote.chocolate:before { color:#f0b556; }
 	
 	blockquote.electricblue { background:#405069; color:#fff; }
 	blockquote.orange { background:#ff9646; color:#fff; }
@@ -238,7 +248,7 @@
 	blockquote.pink { background:#f472d0; color:#fff; }
 	blockquote.lightgreen { background:#86af53; color:#fff; }
 	blockquote.limegreen { background:#afca47; color:#fff; }
-	blockquote.ocean { background:#22a1c4; color:#fff; }
+	blockquote.ocean { background:transparent; border: 14px solid #f0b556; color:#f0b556; }
 	blockquote.royalblue { background:#15488c; color:#fff; }
 	blockquote.violet { background:#665a98; color:#fff; }
 	blockquote.yellow { background:#f1c40f; color:#fff; }
@@ -319,7 +329,7 @@
 	 .dt-sc-pricing-table.type2 th:first-child, .dt-sc-pricing-table.type2 td:first-child { font-size: 13px; padding-left: 0; text-align: left; text-transform: capitalize; }
 	 .dt-sc-pricing-table.type2 th:last-child, .dt-sc-pricing-table.type2 td:last-child { border-right: none; }
 	 
-	 .dt-sc-pricing-table.type3 .dt-sc-pr-tb-col { background: #fff; border: 1px solid #ededed; display: inline-block; overflow: hidden; padding: 30px; position: relative; text-align: center; width: 100%; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: 0 0 3px #ededed; -moz-box-shadow: 0 0 3px #ededed; -ms-box-shadow: 0 0 3px #ededed; -o-box-shadow: 0 0 3px #ededed; box-shadow: 0 0 3px #ededed; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box; -webkit-transition: all 300ms linear; -moz-transition: all 300ms linear; -o-transition: all 300ms linear; -ms-transition: all 300ms linear; transition: all 300ms linear; }
+	 .dt-sc-pricing-table.type3 .dt-sc-pr-tb-col { background: #fff; border: 1px solid #ededed; display: inline-block; overflow: hidden; padding: 12px; position: relative; text-align: center; width: 100%; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: 0 0 3px #ededed; -moz-box-shadow: 0 0 3px #ededed; -ms-box-shadow: 0 0 3px #ededed; -o-box-shadow: 0 0 3px #ededed; box-shadow: 0 0 3px #ededed; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box; -webkit-transition: all 300ms linear; -moz-transition: all 300ms linear; -o-transition: all 300ms linear; -ms-transition: all 300ms linear; transition: all 300ms linear; }
 	 
 	 .dt-sc-pricing-table.type3 .dt-sc-pr-tb-col:hover:after, .dt-sc-pricing-table.type3 .dt-sc-pr-tb-col.selected:after { content: none; }
 	 
@@ -328,7 +338,7 @@
 	 .dt-sc-pricing-table.type3 .dt-sc-pr-tb-col h3 { font-size: 30px; font-weight: 500; line-height: 30px; }
 	 
 	 .dt-sc-pricing-table.type3 .dt-sc-pr-tb-col .icon:before { border: 1px solid; bottom: 0; content: ""; height: 100px; left: 0; margin: 15px auto; position: absolute; right: 0; text-align: center; top: 0; transform: rotate(45deg); -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); width: 100px; }	
-	 .dt-sc-pricing-table.type3 .dt-sc-pr-tb-col .icon { display: block; float: left; height: 145px; margin: 0 0 10px; position: relative; width: 100%; }
+	 .dt-sc-pricing-table.type3 .dt-sc-pr-tb-col .icon { display: block; float: left; height: 250px; margin: 0 0 10px; position: relative; width: 100%; }
 	 .dt-sc-pricing-table.type3 .dt-sc-pr-tb-col .icon span { bottom: 0; left: 0; line-height: 134px; margin: 0; position: absolute; right: 0; top: 0; vertical-align: middle; }	
 	
 	 .dt-sc-pricing-table.type3 .dt-sc-pr-tb-col span img { vertical-align: middle; } 
