--- a/style.css
+++ b/style.css
@@ -11,6 +11,165 @@
 
 
 	/*----*****---- << Nuevos estilos >> ----*****----*/
+	a{
+		text-decoration: none !important;
+	}
+	/*botn_idioma*/
+.btn_google{
+	position: absolute;
+    z-index: 9999;
+    top: 87px;
+    right: 100px;
+	opacity: 0;
+	
+}
+.interior_btn_idioma{
+	position: absolute;
+    
+    font-size: 14px; 
+	margin-top: -1px;
+	margin-left: 970px;
+	background: linear-gradient(rgba(255, 255, 255, 0.7),rgba(255, 255, 255, 0.3));
+    border: 1px solid rgba(255, 255, 255, 0.2);
+	box-shadow: 2px 2px 8px rgb(0 0 0 / 20%);
+	padding: 1px 10px 0px 10px;
+	border-bottom-right-radius: 13px;
+	border-bottom-left-radius: 13px;
+
+}
+.icono_idioma{
+	font-size: 35px;
+    color: #e28b56;
+    margin-right: 7px;
+    position: absolute;
+}
+.texto_boton_idioma{
+	margin-left: 52px;
+    line-height: 38px;
+}
+/*botn_idioma*/
+	/*checkbox*/
+input[type=checkbox] + label{
+	display: block;
+	position: relative;
+	border-radius: 20px;
+	background: linear-gradient(rgba(255, 255, 255, 0.6),rgba(255, 255, 255, 0.3));
+	backdrop-filter: blur(2px);
+	width: 55px;
+	height: 30px;
+	-webkit-appearance: none;
+	outline: none;
+	transition: .2s;
+	box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+}
+input[type=checkbox]{
+	display: none;
+}
+input:checked[type=checkbox] + label{
+	background: #ddd9d3;
+	box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+	
+}
+input[type=checkbox] + label:before{
+	content:'';
+	position: absolute;
+	width: 30px;
+	height: 30px;
+	border-radius: 20px;
+	left: 0;
+	top: 0;
+	background-color:#f0b556 ;
+	border: 2px solid #fac46e;
+	/*background: linear-gradient(-45deg, #f0b556 50%, #fac46e 50%);*/
+	transform: scale(1.1);
+	box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+	transition: .2s;
+	
+}
+input:checked[type=checkbox] + label:before{
+	
+left: 30px;
+	
+}
+
+
+	div.dataTables_wrapper div.dataTables_info {
+		padding-top: 0.85em !important;
+		white-space: nowrap !important;
+		color: #b0b3b3 !important;
+	}
+	.next {
+		right: 0 !important;
+		border-radius: 0px!important;
+		position: relative !important;
+		top: 0 !important;
+		background: transparent !important;
+		width: auto !important;
+		height: 0px !important;
+		border: 0px solid !important ;
+    	opacity: 1 !important;
+   
+	}
+	
+	.page-item.active .page-link {
+		z-index: 1 !important;
+		color: #fff!important;
+		background-color: #f0b556 !important;
+		border-color: #f0b556 !important;
+	}
+	.page-link {
+		position: relative !important;
+		display: block !important;
+		padding: .5rem .75rem !important;
+		margin-left: -1px !important;
+		line-height: 1.25 !important;
+		color: #b0b3b3 !important;
+		background-color: transparent !important;
+		border: 0px solid !important;
+	}
+
+	*:focus {
+		outline: none !important;
+	}
+	.form-control {
+		
+		color: #495057;
+		background: linear-gradient(rgba(255, 255, 255, 0.7),rgba(255, 255, 255, 0.3))!important;
+		box-shadow: 1px 1px 6px rgb(0 0 0 / 10%)!important;
+		outline: none !important;
+		border: 1px solid #f5f5f5 !important;
+		border-radius: .25rem;
+		
+	}
+	/*tabla_vuelos*/
+	#mydatatable tfoot input{
+		width: 100% !important;
+	}
+	#mydatatable tfoot {
+		display: table-header-group !important;
+	}
+thead input {
+	width: 100%;
+}
+/*tabla_vuelos*/
+	.parrafos-ol-nosotros{
+		color: #757575;
+		font-weight: 500;
+	}
+	.boton_servicio_especial{
+		background: linear-gradient(-45deg, #2e2e2e 50%, #414141 50%)!important;
+		border: 2px solid #2e2e2e;
+		color: #F5F5F5 !important;
+	}
+	.boton_servicio_taxi{
+		border: 2px solid #f0b556;
+	}
+	.margen-bloque{
+		padding: 0px 34px;
+	}
+	.margen-bloque-2{
+		padding: 0px 100px 0px 9px;
+	}
 	.contenedor_info_servicio_taxi{
 	border-bottom: 2px solid #f0b556;
     border-left: 2px solid #f0b556;
@@ -23,6 +182,13 @@
 
 	}
 	.contenedor_info_servicio_especial{
+	background-color: #414141;
+    display: inline-block;
+    width: 93%;
+    margin-top: -30px;
+    padding-left: 30px;
+	padding-right: 30px;
+	position: relative;
 		
 	}
 
@@ -41,6 +207,7 @@
 	border-top: 2px solid #f0b556;
 	border-top-left-radius: 20px;
 	display: block;
+	height: 0;
 	
 	}
 	.boton_clases_taxi{
@@ -404,8 +571,8 @@
 }
 .tooltip.bottom .tiptext{
     margin-left: -109px;
-    top: 150%;
-    left: 50%;
+    top: 78%;
+    left: 37%;
 }
 .tooltip.bottom .tiptext::after{
     margin-left: -5px;
@@ -793,11 +960,11 @@ backdrop-filter: blur(4px);
 	ul, ol, pre, code{ margin-bottom:20px; }
 	
 	ul{ list-style-type:none; list-style-position:inside; }
-	ul li { padding-bottom:10px; }
+	ul li { padding-bottom:0px; }
 	ul li ul { list-style-type:disc; padding-left:20px; margin:10px 0px 0px; }
 	ul ul ul { margin-bottom:0px; list-style-type:circle; }
 	
-	ol{ list-style-type:decimal; list-style-position:outside; padding-left:20px; }
+	ol{ list-style-type:decimal; list-style-position:outside; padding-left:20px; font-weight: 700; color: #f0b556; }
 	ol li { padding-bottom:10px; }
 	ol li ol { margin-bottom:0px; list-style-type:lower-alpha; }
 	ol ol ol { margin-bottom:0px; list-style-type:lower-roman; }	
@@ -841,10 +1008,14 @@ backdrop-filter: blur(4px);
 	.post-edit-link:hover { background:#4C4C4C; color:#ffffff; text-shadow:0px 1px 0px #0e4b6e; }
 		
 	/*----*****---- << Tables >> ----*****----*/
+	table { border-collapse:separate; border-spacing:0; /*margin-bottom:20px;*/ width:98% !important; clear:both; border-color:rgba(219, 219, 219, 0.2) !important; border-style: solid; border-width: 1px 1px 1px 1px !important; box-shadow: 2px 2px 8px rgb(0 0 0 / 20%); margin-left: 6px;}
+	th { background-color: #e5ab4d !important; color: #fff; border-color:rgba(255, 255, 255, 0) !important; border-style: solid; border-width: 0 0px 0px 0; padding:17px 15px; font-size:12px; line-height:normal; font-weight:bold;  text-align:center !important; letter-spacing: 2px; }
+	td { background: linear-gradient(rgba(255, 255, 255, 0.3),rgba(255, 255, 255, 0.1)); border-color:rgba(255, 255, 255, 0) !important;  border-width:  0 0px 0px 0 ;  font-size:14px; line-height:normal; text-align:center; padding:13px 15px;backdrop-filter: blur(2px);color: #3f4149;font-weight: 600;}
+	tr{ background-color: #d0cbc4;}
 	
-	table { border-collapse:separate; border-spacing:0; margin-bottom:20px; width:100%; clear:both; border-color: #dfdfdf; border-style: solid; border-width: 1px 0 0 1px; }
+	/*table { border-collapse:separate; border-spacing:0; margin-bottom:20px; width:100%; clear:both; border-color: #dfdfdf; border-style: solid; border-width: 1px 0 0 1px; }
 	th { color: #fff; border-style: solid; border-width: 0 1px 3px 0; padding:17px 15px; font-size:16px; line-height:normal; font-weight:bold; text-transform:uppercase; text-align:center; }
-	td { border-color: #dfdfdf; border-style: solid; border-width:  0 1px 1px 0 ; background:#f7f7f7; font-size:14px; line-height:normal; text-align:center; padding:13px 15px; }
+	td { border-color: #dfdfdf; border-style: solid; border-width:  0 1px 1px 0 ; background:#f7f7f7; font-size:14px; line-height:normal; text-align:center; padding:13px 15px; }*/
 	
 	/*----*****---- << Columns >> ----*****----*/
 	
@@ -907,7 +1078,7 @@ backdrop-filter: blur(4px);
 		
 	/*----*****---- << Forms >> ----*****----*/
 	
-	label{ color:#2e2a2b; font-size: 12px; font-weight: 500; }
+	label{ color:#fc8c52!important; font-size: 14px; font-weight: 500; }
 	label span{ color:#b4b4b4; }
 
 	fieldset{ border:1px solid #efefef; padding:15px; margin:0 0 20px 0; }
@@ -917,7 +1088,7 @@ backdrop-filter: blur(4px);
 	input[type="text"], input[type="email"], input[type="password"], input[type="tel"] { }
 	textarea { height: 190px; margin: 20px 0 0; overflow:auto; resize: none; }
 	
-	 select { background-color: #ffffff; background-image: url("images/select-box.jpg"); background-position: right center; background-repeat: no-repeat; border: 1px solid #c4c4c4; border-radius: 0; color: #666666; cursor: pointer; display: block; font-size: 14px; height: 50px; margin: 10px 0; outline: medium none; padding: 15px; width: 100%; }
+	 select {background: linear-gradient(rgba(255, 255, 255, 0.7),rgba(255, 255, 255, 0.3));/* background-image: url("images/select-box.jpg"); background-position: right center; background-repeat: no-repeat;*/ border: 1px solid #c4c4c4; border-radius: 0; color: #666666; cursor: pointer; display: block; font-size: 14px;  margin: 10px 0; outline: medium none; padding: 7px 15px; box-shadow: 1px 1px 6px rgb(0 0 0 / 10%);backdrop-filter: blur(4px); border-radius: 8px;/* width: 100%;*/ }
 	 select option { padding: 0 15px; } 
 	.selection-box { display: block; position: relative; } 
 	.selection-box:before, .selection-box:after { content: ""; pointer-events: none; position: absolute; }
