--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@
 
 
 	/*----*****---- << Nuevos estilos >> ----*****----*/
+	.contenedor_fecha_inicio{
+		width: 100%;
+    height: 160px;
+    position: absolute;
+    z-index: 3333;
+    top: 150px;
+    right: 10px;
+	}
 	a{
 		text-decoration: none !important;
 	}
@@ -23,9 +31,16 @@
 	opacity: 0;
 	
 }
+.btn_google_2{
+	position: absolute;
+    z-index: 99999999;
+    top: 87px;
+    right: 100px;
+	opacity: 0;
+	
+}
 .interior_btn_idioma{
 	position: absolute;
-    
     font-size: 14px; 
 	margin-top: -1px;
 	margin-left: 970px;
@@ -37,15 +52,31 @@
 	border-bottom-left-radius: 13px;
 
 }
+.interior_btn_idioma_2{
+	position: absolute;
+    font-size: 14px; 
+	margin-top: 86px;
+	margin-left: 1100px;
+	background: linear-gradient(rgba(255, 255, 255, 0.7),rgba(255, 255, 255, 0.3));
+    border: 1px solid rgba(255, 255, 255, 0.2);
+	box-shadow: 2px 2px 8px rgb(0 0 0 / 20%);
+	padding: 1px 10px 0px 10px;
+	border-bottom-right-radius: 13px;
+	border-bottom-left-radius: 13px;
+	display: flex;
+
+}
 .icono_idioma{
 	font-size: 35px;
     color: #e28b56;
     margin-right: 7px;
-    position: absolute;
+    position: relative;
 }
 .texto_boton_idioma{
-	margin-left: 52px;
-    line-height: 38px;
+	margin-left:0;
+	line-height: 38px;
+	display: block;
+	color: #e28b56;
 }
 /*botn_idioma*/
 	/*checkbox*/
